footer spacing fix

--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -1148,7 +1148,7 @@
 }
 /* Tablet - 768px */
 @media only screen and (min-width: 48rem) {
-    .footer-1390{
+    #footer-1390{
         padding: 2rem;
     }
     #footer-1390 .cs-top {
